fix splashscreen on firefox

--- a/election-web.css
+++ b/election-web.css
@@ -1,6 +1,7 @@
 body { margin: 8px; font-family: sans-serif; }
 
 #splash { position: fixed; left: 0; right: 0; top: 0; bottom: 0; width:200px; height:200px; margin: auto;}
+#splash svg { width: 200px; height: 200px; }
 path#progback { stroke: gray; stroke-width:5px; fill: none; }
 path#progbar { stroke: none; fill: lightblue; }
 #progtext { font-size: 32px; font-weight: bold; }
